--- a/testing/src/main/resources/application.yml
+++ b/testing/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         #show_sql: true
