--- a/testing/src/main/resources/application.yml
+++ b/testing/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/capstone?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://127.0.0.1:3306/capstone?serverTimezone=UTC &useLegacyDatetimeCode=false
     username: capstone
     password: zoqtmxhselwkdls6!
 
@@ -18,6 +18,8 @@ spring:
 
     hibernate:
       ddl-auto: none
+      jdbc:
+        time_zone: Asia/Seoul
     properties:
       hibernate:
         #show_sql: true
